--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  sqflite: ^2.4.2
+  path_provider: ^2.1.5
+  json_annotation: ^4.8.0
   get_it: ^7.6.9
   rxdart: ^0.27.7
   loading_animation_widget: ^1.3.0
   cupertino_icons: ^1.0.8
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +47,7 @@ dev_dependencies:
   mockito: ^5.4.5
   build_runner: ^2.4.15
   flutter_lints: ^5.0.0
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -56,9 +61,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/3x4_genetics_logo.png
+    - assets/images/success_banner.png
+    - assets/images/error_banner.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
