--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,24 +31,29 @@ dependencies:
   flutter:
     sdk: flutter
 
-  sqflite: ^2.4.2
-  path_provider: ^2.1.5
+  http: ^1.3.0
   json_annotation: ^4.8.0
+
   get_it: ^7.6.9
   rxdart: ^0.27.7
+
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  path_provider: ^2.1.5
+  flutter_secure_storage: ^9.2.4
+
   loading_animation_widget: ^1.3.0
   cupertino_icons: ^1.0.8
-  http: ^1.3.0
-  flutter_secure_storage: ^9.2.4
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  mockito: ^5.4.5
-  build_runner: ^2.4.15
-  flutter_lints: ^5.0.0
   json_serializable: ^6.6.1
+  build_runner: ^2.4.15
+  mockito: ^5.4.5
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
